Add all the jars in RESOURCES_ARTIFACTS_GOBY3_JAR to the classpath when running goby3.