@@ -11,6 +11,7 @@ function run_goby {
    SLF4J_CONFIG=${RESOURCES_ARTIFACTS_GOBY3_JAR}/config/goby-logback.xml
    # set both minimum and max right away so failure occurs early and parallel GC is happier.
    ${RESOURCES_ARTIFACTS_JAVA_LINUX_BINARIES}/bin/java -Xms${memory} -Xmx${memory} ${JVM_MEM_OPTIONS} \
+                       -Djava.ext.dirs=${RESOURCES_ARTIFACTS_GOBY3_JAR}/ \
                        -Dlogback.configurationFile=${SLF4J_CONFIG} \
                        -Dgoby.configuration=file:${TMPDIR}/goby.properties \
                        -jar ${RESOURCES_ARTIFACTS_GOBY3_JAR}/goby.jar \
@@ -27,6 +28,7 @@ function goby3 {
       SLF4J_CONFIG=${RESOURCES_ARTIFACTS_GOBY3_JAR}/config/goby-logback.xml
      # set both minimum and max right away so failure occurs early and parallel GC is happier.
    ${RESOURCES_ARTIFACTS_JAVA_LINUX_BINARIES}/bin/java ${GRID_JVM_FLAGS} ${JVM_MEM_OPTIONS} \
+                       -Djava.ext.dirs=${RESOURCES_ARTIFACTS_GOBY3_JAR}/ \
                        -Dlogback.configurationFile=${SLF4J_CONFIG} \
                        -Dgoby.configuration=file:${TMPDIR}/goby.properties \
                        -jar ${RESOURCES_ARTIFACTS_GOBY3_JAR}/goby.jar \
